--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,16 @@
 
 * {
   box-sizing: border-box;
+  scroll-snap-type: y mandatory;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   padding: 0;
-  scroll-behavior: smooth;
   background-color: var(--primary-color);
   font-family: var(--primary-font);
   color: var(--primary-font-color);
@@ -42,7 +46,7 @@ a:hover {
   opacity: 0.75;
 }
 
-nav {
+.topnav-container {
   display: flex;
   justify-content: space-between;
   background-color: #2c4ab6;
@@ -83,7 +87,9 @@ nav button:hover {
 }
 
 section {
+  padding-top: 3rem;
   min-height: 100vh;
+  scroll-snap-align: start;
 }
 
 footer {
@@ -143,7 +149,7 @@ footer {
 #features h1 {
   margin: 0;
   padding-top: 5rem;
-  font-size: 90px;
+  font-size: 128px;
   font-weight: 600;
   opacity: 0.8;
   font-family: "Rajdhani";
@@ -152,10 +158,6 @@ footer {
 #features p {
   font-size: 40px;
   opacity: 0.8;
-}
-
-.hero-text {
-  max-width: 50%;
 }
 
 .team {
@@ -225,4 +227,45 @@ footer {
 
 .price button:hover {
   opacity: 0.75;
+}
+
+/* Side Nav CSS */
+.sidenav {
+  --nav-gap: 50px;
+  padding: var(--nav-gap);
+  position: fixed;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.sidenav-item {
+  align-items: center;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: var(--nav-gap);
+}
+
+.sidenav-label {
+  color: black;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.1s;
+}
+
+.sidenav-link:hover ~ .sidenav-label {
+  opacity: 1;
+}
+
+.sidenav-link {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  height: var(--nav-gap);
+  width: var(--nav-gap);
+  transition: transform(transform 0.1s);
+}
+
+.sidenav-link-selected {
+  background: black;
+  transform: scale(1.4);
 }
