--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ a:hover {
   padding-top: 1rem;
   padding-bottom: 1.5rem;
 
-  margin-inline: 5rem;
+  margin-inline: 5em;
 }
 
 .maxw {
@@ -423,18 +423,19 @@ li:before {
 
 .team-header {
   max-width: 40%;
-  font-size: 3rem;
+  font-size: clamp(32px, 3.125vw, 10rem);
   margin-inline: auto;
 }
 
 .team-summary {
   max-width: 40%;
-  font-size: 1.25rem;
+  font-size: clamp(16px, 1.3021vw, 10rem);
   line-height: 1.5;
 }
 
 .team-container img {
   width: 20%;
+  min-width: 180px;
   height: auto;
 }
 
@@ -454,10 +455,19 @@ footer img {
   padding-top: 1em;
 }
 
+.copyright {
+  font-size: clamp(12px, 1.0417vw, 10rem);
+}
+
 .footer-links {
   display: flex;
   justify-content: space-around;
-  width: 15%;
+  font-size: clamp(12px, 1.0417vw, 10rem);
+  /* width: 15%; */
+}
+
+.footer-links a:nth-child(1) {
+  padding-right: 1em;
 }
 
 /* .bg{
@@ -498,6 +508,11 @@ Button CSS if used again
     padding: 3em 6em;
     max-width: 60%;
   }
+
+  .team-container {
+    justify-content: center;
+    gap: 2.5em;
+  }
 }
 @media (max-width: 900px) {
   .demo {
@@ -507,6 +522,10 @@ Button CSS if used again
   .demo-col1 {
     display: flex;
     /* flex-direction: row; */
+  }
+
+  .team-container img {
+    align-self: flex-start;
   }
 
   /* .demo-col2 {
@@ -523,6 +542,11 @@ Button CSS if used again
 
   .price h2 {
     text-align: center;
+  }
+
+  .team-header,
+  .team-summary {
+    max-width: 60%;
   }
 }
 
@@ -552,9 +576,19 @@ Button CSS if used again
     border-radius: 40vw;
   }
 
-  /* change padding of pricing container  */
   .pricing-container div {
     padding: 1.5em 4em;
+  }
+
+  .footer-links {
+    flex-direction: column;
+    padding-top: 0.5em;
+    line-height: 2;
+  }
+
+  .team-header {
+    max-width: 80%;
+    text-align: center;
   }
 }
 
@@ -576,11 +610,29 @@ Button CSS if used again
     height: 50vw;
     border-radius: 50vw;
   }
+
+  .team img {
+    display: none;
+  }
+
+  .team-summary {
+    max-width: 60vw;
+  }
 }
 
 @media (max-width: 500px) {
   .pricing-container div {
     padding: 1rem 2rem;
     max-width: 80%;
+  }
+
+  .team-header {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 400px) {
+  .team-summary {
+    font-size: 14px;
   }
 }
