--- a/contact.styles.css
+++ b/contact.styles.css
@@ -53,22 +53,46 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .contact__title {
   text-align: center;
+  font-size: 3rem;
 }
 
 .contact__form {
-  padding-inline: 5em;
+  width: 60%;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 16px;
 }
 
-.form__row {
-  display: flex;
+label {
+  font-size: 32px;
+  justify-self: end;
 }
 
-.form__input {
-  margin-left: 3rem;
+.form__submit {
+  background-color: var(--purple-btn);
+  grid-column: 2/3;
+  width: 33%;
+  justify-self: end;
+  padding: 0.625em 1.25em;
+  font-size: clamp(16px, 1.3021vw, 10rem);
+  color: white;
+  border-radius: 14px;
+  min-width: fit-content;
+}
+
+.form__submit:hover {
+  opacity: 0.75;
+}
+
+.form__input,
+textarea {
+  padding: 12px 20px;
+  font-size: 16px;
 }
 
 a {
@@ -115,4 +139,28 @@ footer img {
 
 .footer-links a:nth-child(1) {
   padding-right: 1em;
+}
+
+@media (max-width: 600px) {
+  .contact__form {
+    display: flex;
+    flex-direction: column;
+  }
+  .form__submit {
+    align-self: center;
+  }
+
+  .contact {
+    margin-top: 1em;
+  }
+
+  .contact__title {
+    font-size: clamp(20px, 2.6043vw, 2.5rem);
+  }
+
+  label,
+  .form__input,
+  textarea {
+    font-size: clamp(12px, 1.3021vw, 1.25rem);
+  }
 }
