--- a/contact.styles.css
+++ b/contact.styles.css
@@ -6,6 +6,7 @@
   --footer-color: #44558b;
   --purple-btn: #785987;
   --primary-link-color: #eeeded;
+  --links-font: "Titillium Web", sans-serif;
 }
 
 * {
@@ -14,6 +15,10 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+a {
+  font-family: var(--links-font);
 }
 
 body {
@@ -43,8 +48,39 @@ body {
   min-width: 90px;
 }
 
-.navbar a {
+.topnav__links-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+}
+
+.topnav__link {
   font-size: 18px;
+  padding: 2rem;
+}
+
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 5px auto;
+}
+
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
 }
 
 .contact {
@@ -139,6 +175,21 @@ footer img {
 
 .footer-links a:nth-child(1) {
   padding-right: 1em;
+}
+
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
+  }
+  .topnav__links {
+    display: none;
+  }
+  .topnav__links.active {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 120px;
+  }
 }
 
 @media (max-width: 600px) {
